# agent-merge-readiness

./: AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: closeout.md  proof-packet.json  risky.diff
src/agent_merge_readiness/: __init__.py  cli.py
tests/: test_cli.py
