[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-merge-readiness"
version = "0.1.0"
description = "Judge coding-agent merge readiness from a diff, checks, and closeout evidence."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Manuel Sampedro" }
]
keywords = ["ai agents", "codex", "merge", "review", "developer tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance"
]

[project.scripts]
agent-merge-readiness = "agent_merge_readiness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
